--- a/blog_Douban.html
+++ b/blog_Douban.html
@@ -53,7 +53,10 @@
           style="width:85%; margin:15px auto; display: block;font-style: italic;font-weight: 200;"
           >"Modality is a design technique that presents content in a temporary
           mode that’s separate from the user's previous current context and
-          requires an explicit action to exit."
+          requires an explicit action to exit."<span
+            style="display: block; text-align: right;"
+            >————Apple HIG</span
+          >
         </span>
         &emsp;Breaking current user flow which is what modality does always
         should be the last choice when designing a flow. Because breaking could
@@ -68,6 +71,60 @@
         mistake about modality usage. In the details page of a work, when
         pressing the "more" button located in the top right corner, a sheet
         modal view covering half screen will come out.
+        <div style="text-align: center; margin-top: 18px;">
+          <img
+            style="width: 100%;"
+            src="http://r.photo.store.qq.com/psc?/V11TKo8Q1FxsOO/jASqEt644m*KNERKGtvN1ZsrKSWBVhMBK42tpqO6uOkzfLTeGkhLgYdz37gXBmbOSU4GQqjRUnH1kw2vlmk.MavuRSw13tLKwbiUDeM7Grs!/r"
+            alt=""
+          />
+        </div>
+        &emsp;This interaction breaks Fitts's law by creating a long path to
+        move.<span
+          style="width:85%; margin:15px auto; display: block;font-style: italic;font-weight: 200;"
+          >"Fitts's law predicts that the time required to rapidly move to a
+          target area is a function of the ratio between the distance to the
+          target and the width of the target."<span
+            style="display: block; text-align: right;"
+            >————Wikipedia</span
+          >
+        </span>
+        &emsp;As shown in the picture below, we have to adjust the holding
+        gesture to reach the button above. But after tapping the button, the
+        modal view comes out from the bottom. We have to adjust gesture again
+        for further actions.
+        <div style="text-align: center; margin-top: 18px;">
+          <img
+            style="width: 100%;"
+            src="http://r.photo.store.qq.com/psc?/V11TKo8Q1FxsOO/jASqEt644m*KNERKGtvN1YJnF0DRYBz7oUAXBaKNMyxakVmJCiKAVicydv9ypxVYSavaHK9ralLbIAwcjK60QQp38Xc4IWQ5cFO4Yqfrwt8!/r"
+            alt=""
+          />
+        </div>
+        <br />&emsp;Designers of Taobao did a better job than Douban did. They
+        present a shorter path after the previous action.
+        <div style="text-align: center; margin-top: 18px;">
+          <img
+            style="width: 100%;"
+            src="http://r.photo.store.qq.com/psc?/V11TKo8Q1FxsOO/jASqEt644m*KNERKGtvN1U0MqHVJWPmvUljrFtGaQITGnGqdEyosfsgJH0*5lwcjbXUJtMcLRZUFCgX*X0AbA6tq2oRSp*cS450B1ZGqhJQ!/r"
+            alt=""
+          />
+        </div>
+        <br />&emsp;Besides, with the size of cellphones becomes bigger,
+        interaction requiring changing gestures would make users annoyed.
+        Instead in the new version of Samsung OneUI, designers divide the screen
+        into two areas for viewing and interacting respectively. Also, they put
+        action buttons in the area that could be comfortably reached.
+        <div style="text-align: center; margin-top: 18px;">
+          <img
+            style="width: 100%;"
+            src="http://r.photo.store.qq.com/psc?/V11TKo8Q1FxsOO/jASqEt644m*KNERKGtvN1UtnUVs7wowDcwmGHTmikpqeYfXqoEyjveUjcdrBGdiITKerP*ePMV3gvkXszOpU.aF*18zkmGK3sLBTYqFg5ls!/r"
+            alt=""
+          />
+        </div>
+        <br />&emsp;In all, seemingly unimportant mistakes like this might be
+        devastating because users might drop their phones on the ground when
+        changing gestures like me. I wonder if there is a possibility to develop
+        a tool for checking this kind of mistake automatically to help designer
+        save their time on these issues.
       </div>
 
       <div class="pager">
