--- a/work.html
+++ b/work.html
@@ -43,6 +43,12 @@
 
       <h1>WORKS</h1>
       <div class="works">
+        <a href="./works/work_cm.html" class="workItem" id="wi0">
+          <div class="intro">
+            ChinaMobile ReDesign
+            <span>Experience Design</span>
+          </div>
+        </a>
         <a href="./works/work_Share.html" class="workItem" id="wi1">
           <div class="intro">
             SHARE·BOX
