--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
             <span>Experience Design</span>
           </div>
         </a>
-        <a class="work2" href="./works/work_Prepal.html">
+        <a class="work2" href="./works/work_Hospass.html">
           <div class="intro">
-            PREPAL
-            <span>Interaction Design</span>
+            Hospass
+            <span>Experience Design</span>
           </div>
         </a>
         <a class="moreWork" href="./work.html"
