--- a/works/work_Sjtu.html
+++ b/works/work_Sjtu.html
@@ -88,7 +88,7 @@
             alt=""
           />
           <img
-            src="http://r.photo.store.qq.com/psc?/V11TKo8Q0GNhTs/jASqEt644m*KNERKGtvN1SCnLrC0K.7lCV5ynIxwnhd7kALv7T7Ms4IQNsoFrsKXhXVhsaFJiyt*I9yEhJk8lo1wudOZTq5mZSMv8lVCseQ!/r"
+            src="http://r.photo.store.qq.com/psc?/V11TKo8Q0GNhTs/jASqEt644m*KNERKGtvN1aIq0kZMLRwnquqPrpgJJZBD1onMgKAooEHEkfsu4*GVw2I7*ay9dT09DPGgoJRoj60kUlTMe6ql8cQsKg.j5w0!/r"
             alt=""
           />
         </div>
