--- a/work.html
+++ b/work.html
@@ -49,10 +49,10 @@
             <span>Experience Design</span>
           </div>
         </a>
-        <a href="./works/work_Share.html" class="workItem" id="wi1">
+        <a href="./works/work_Hospass.html" class="workItem" id="wi1">
           <div class="intro">
-            SHARE·BOX
-            <span>Interaction Design</span>
+            HOSPASS
+            <span>Experience Design</span>
           </div>
         </a>
         <a href="./works/work_Prepal.html" class="workItem" id="wi2">
@@ -61,9 +61,9 @@
             <span>Interaction Design</span>
           </div>
         </a>
-        <a href="./works/work_Hospass.html" class="workItem" id="wi3">
+        <a href="./works/work_Share.html" class="workItem" id="wi3">
           <div class="intro">
-            HOSPASS
+            SHARE·BOX
             <span>Interaction Design</span>
           </div>
         </a>
