--- a/works/work_Hospass.html
+++ b/works/work_Hospass.html
@@ -63,13 +63,13 @@
       </div>
 
       <div class="pager">
-        <a href="../works/work_Prepal.html">
+        <a href="../works/work_cm.html">
           previous
-          <span>PrePal</span>
+          <span>ChinaMobile ReDesign</span>
         </a>
-        <a href="../works/work_Ficars.html">
+        <a href="../works/work_Prepal.html">
           next
-          <span>FICARS</span>
+          <span>PrePal</span>
         </a>
       </div>
 
