--- a/works/work_Prepal.html
+++ b/works/work_Prepal.html
@@ -108,13 +108,13 @@
       </div>
 
       <div class="pager">
-        <a href="../works/work_Share.html">
-          previous
-          <span>Share·Box</span>
-        </a>
         <a href="../works/work_Hospass.html">
+          previous
+          <span>HosPass</span>
+        </a>
+        <a href="../works/work_Share.html">
           next
-          <span>Hospass</span>
+          <span>Share·Box</span>
         </a>
       </div>
 
