--- a/works/work_Share.html
+++ b/works/work_Share.html
@@ -91,13 +91,13 @@
       </div>
 
       <div class="pager">
-        <a href="../work.html">
-          back to
-          <span>List</span>
-        </a>
         <a href="../works/work_Prepal.html">
-          next
+          previous
           <span>PrePal</span>
+        </a>
+        <a href="../works/work_Ficars.html">
+          next
+          <span>FICARS</span>
         </a>
       </div>
 
