--- a/works/work_Ficars.html
+++ b/works/work_Ficars.html
@@ -91,9 +91,9 @@
       </div>
 
       <div class="pager">
-        <a href="../works/work_Hospass.html">
+        <a href="../works/work_Share.html">
           previous
-          <span>Hospass</span>
+          <span>Share·Box</span>
         </a>
         <a href="../works/work_Sjtu.html">
           next
