--- a/works/work_cm.html
+++ b/works/work_cm.html
@@ -83,9 +83,9 @@
           Back to
           <span>WORKS</span>
         </a>
-        <a href="../works/work_Share.html">
+        <a href="../works/work_Hospass.html">
           next
-          <span>Share·Box</span>
+          <span>HosPass</span>
         </a>
       </div>
 
