--- a/blog_stickers.html
+++ b/blog_stickers.html
@@ -74,13 +74,13 @@
       </div>
 
       <div class="pager">
-        <a href="blog_leanUX.html">
-          previous
-          <span>Thoughts on Lean UX</span>
+        <a href="./blog.html">
+          back to
+          <span>BLOGS</span>
         </a>
-        <a href="./blog_Douban.html">
+        <a href="./blog_Replay.html">
           next
-          <span>Modality in Douban APP</span>
+          <span>Replay Experience in TikTok</span>
         </a>
       </div>
 
