--- a/work.html
+++ b/work.html
@@ -55,6 +55,13 @@
             <span>Experience Design</span>
           </div>
         </a>
+        <a href="./works/work_FAQ.html" class="workItem" id="wi8">
+          <div class="intro">
+            FAQ in Live Stream
+            <span>Experience Design</span>
+          </div>
+        </a>
+
         <a href="./works/work_Prepal.html" class="workItem" id="wi2">
           <div class="intro">
             PREPAL
@@ -93,7 +100,7 @@
       </div>
 
       <footer class="contact" id="contact">
-        <a href="" id="logo"><img src="./images/logo.png" alt=""/></a>
+        <a href="" id="logo"><img src="./images/logo.png" alt="" /></a>
         <div id="phone">
           <span>WeChat & Phone</span>
           152 1683 1797
