--- a/works/work_FAQ.html
+++ b/works/work_FAQ.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>HOSPASS by YUQI</title>
+    <title>FAQ by YUQI</title>
     <link rel="icon" href="../images/ICON.png" />
     <link rel="stylesheet" href="../css/reset.css" />
     <link rel="stylesheet" href="../css/common.css" />
@@ -22,7 +22,7 @@
     <script src="../js/canvas.js"></script>
   </head>
   <body>
-    <div class="bbg3"></div>
+    <div class="bbg7"></div>
     <div class="container">
       <nav class="nav">
         <div class="logo">
@@ -43,33 +43,33 @@
 
       <div class="content">
         <div class="title">
-          HOSPASS
-          <span>Interaction Design</span>
+          FAQ in Live Stream
+          <span>Experience Design</span>
         </div>
         <div class="pic">
           <img
-            src="http://r.photo.store.qq.com/psc?/V11TKo8Q4bsQkq/jASqEt644m*KNERKGtvN1ZcKA7sbpovqVJen7kqSAaZUaBjd3hgtbAlXnai524WGUJBe3o9ecKo.GOXhlXnO1Vfi7mjInAOHiSnfItEU78U!/r"
+            src="http://r.photo.store.qq.com/psc?/V11TKo8Q1XAzPu/jASqEt644m*KNERKGtvN1ePV7onPUdYtZESKe**RavnPq1JZXUx1E6Gj51a9qu.4u*cSRoHNgAHw3rGdd3SWXqG4J71mYLXdyIrYRZHyW0g!/r"
             alt=""
           />
           <img
-            src="http://r.photo.store.qq.com/psc?/V11TKo8Q4bsQkq/jASqEt644m*KNERKGtvN1Xx09Vdmj1LPgNID3Pxx2KcqUydAnaYcxcikI.*tJcnbh3L2JFulQQOmwYI*lMqkIGnuwlBXtHSb4NeapeR6ZEA!/r"
-            alt=""
+            src="https://wx1.sinaimg.cn/large/006m3jLAgy1gdwqmcg94jg31o211gqv7.gif"
+            alt="demo of prototype"
           />
           <img
-            src="http://r.photo.store.qq.com/psc?/V11TKo8Q4bsQkq/jASqEt644m*KNERKGtvN1TEdEIMSfNe3YZ86VQRPu8E.oY2jpMG0BGFmjYcczpkBaY9oarpHDY7eGQKIgSa*S*9IyuQtOdFzm6SIbdMKeHg!/r"
+            src="http://r.photo.store.qq.com/psc?/V11TKo8Q1XAzPu/jASqEt644m*KNERKGtvN1ToMZRvL9rgI7ce.c02r2nZX9ebRdT*Pwsa4CTJiRgDM.M.XOtmjitP.cAXageEo0KBYUGzNkZybijlGRK4fEbQ!/r"
             alt=""
           />
         </div>
       </div>
 
       <div class="pager">
-        <a href="../works/work_cm.html">
+        <a href="../works/work_Hospass.html">
           previous
-          <span>ChinaMobile ReDesign</span>
+          <span>HosPass</span>
         </a>
-        <a href="../works/work_FAQ.html">
+        <a href="../works/work_Prepal.html">
           next
-          <span>FAQ in Live Stream</span>
+          <span>Prepal</span>
         </a>
       </div>
 
