--- a/works/work_Prepal.html
+++ b/works/work_Prepal.html
@@ -108,9 +108,9 @@
       </div>
 
       <div class="pager">
-        <a href="../works/work_Hospass.html">
+        <a href="../works/work_FAQ.html">
           previous
-          <span>HosPass</span>
+          <span>FAQ in Live Stream</span>
         </a>
         <a href="../works/work_Share.html">
           next
@@ -119,7 +119,7 @@
       </div>
 
       <footer class="contact" id="contact">
-        <a href="" id="logo"><img src="../images/logo.png" alt=""/></a>
+        <a href="" id="logo"><img src="../images/logo.png" alt="" /></a>
         <div id="phone">
           <span>WeChat & Phone</span>
           152 1683 1797
