--- a/works/work_FAQ.html
+++ b/works/work_FAQ.html
@@ -52,7 +52,7 @@
             alt=""
           />
           <img
-            src="https://wx1.sinaimg.cn/large/006m3jLAgy1gdwqmcg94jg31o211gqv7.gif"
+            src="http://m.qpic.cn/psc?/V11TKo8Q3kRdes/jASqEt644m*KNERKGtvN1chyalUB4xuSCuPWn1rXC0gT3By*TkiEB6UJgRN4Qf02iCM.E6jSgnKXa7mSM.NQNepB*1GhJ6xeuUm1zkDoQaI!/b&bo=cghEBQAAAAACZ3g!&rf=viewer_4"
             alt="demo of prototype"
           />
           <img
