--- a/work.html
+++ b/work.html
@@ -74,7 +74,7 @@
             <span>Interaction Design</span>
           </div>
         </a>
-        <a href="./works/work_Ficars.html" class="workItem" id="wi4">
+        <!-- <a href="./works/work_Ficars.html" class="workItem" id="wi4">
           <div class="intro">
             FICARS
             <span>Interaction Design</span>
@@ -91,7 +91,7 @@
             SoADM ECUST
             <span>Visual Design</span>
           </div>
-        </a>
+        </a> -->
         <a href="" class="workItem" id="wi7">
           <div class="intro" style="color: #555;">
             more to come...
