Change font to Inter

--- a/blog_Choice.html
+++ b/blog_Choice.html
@@ -12,8 +12,9 @@
       rel="stylesheet"
       href="https://at.alicdn.com/t/font_1615281_6c4rrgsqx9n.css"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.font.im/css?family=IBM+Plex+Sans:300,300i,500,500i,700,700i"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/blogDetail.css" />
@@ -60,7 +61,11 @@
         information about products could be more applicable to reduce choice
         overload compared to the former.<br />&emsp;For instance, we could
         <span
-          style="font-weight: 900; color: white;text-shadow: 2px 2px 0 #db296d;"
+          style="
+            font-weight: 900;
+            color: white;
+            text-shadow: 2px 2px 0 #db296d;
+          "
           >add purchasing data about each item to help user decide, such as
           popularity, gender, age, so on and so forth.</span
         ><br />&emsp;Taking iPhone cases' color, for example, users may spend
@@ -69,13 +74,13 @@
         the unpopular ones.<br />&emsp;I've edited Apple Store pages to find out
         whether it is effective.
         <div style="text-align: center; margin-top: 60px;">
-          <span style="display: block; font-weight:300;">before</span>
+          <span style="display: block; font-weight: 300;">before</span>
           <img
             style="width: 100%;"
             src="http://r.photo.store.qq.com/psc?/V11TKo8Q1FxsOO/jASqEt644m*KNERKGtvN1dFGzVInMU0TQXemczE2v7eezO4nN4csF69eWXcT44zf72bxDIgBmjGH5y6ohp9WmIrdxJpRzHt*TXb3EtRzLj0!/r"
             alt=""
           />
-          <span style="display: block; font-weight:300;margin-top: 30px;"
+          <span style="display: block; font-weight: 300; margin-top: 30px;"
             >after</span
           >
           <img
@@ -108,7 +113,7 @@
       </div>
 
       <footer class="contact" id="contact">
-        <a href="" id="logo"><img src="./images/logo.png" alt=""/></a>
+        <a href="" id="logo"><img src="./images/logo.png" alt="" /></a>
         <div id="phone">
           <span>WeChat & Phone</span>
           152 1683 1797
