--- a/blog_Replay.html
+++ b/blog_Replay.html
@@ -12,8 +12,9 @@
       rel="stylesheet"
       href="https://at.alicdn.com/t/font_1615281_6c4rrgsqx9n.css"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.font.im/css?family=IBM+Plex+Sans:300,300i,500,500i,700,700i"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/blogDetail.css" />
@@ -71,7 +72,13 @@
         make TikTok less bothering while maintaining the same immersive
         experience for users:<br />&emsp;
         <span
-          style="font-weight: 900; color: white; left: 50%; right: 50%; text-shadow: 2px 2px 0 #db296d;"
+          style="
+            font-weight: 900;
+            color: white;
+            left: 50%;
+            right: 50%;
+            text-shadow: 2px 2px 0 #db296d;
+          "
           >The video should still loop as before but the volume of the video
           should be lower once the video begins looping. And in each next loop,
           the volume will be lower than the previous loop. In the fifth loops,
@@ -106,7 +113,7 @@
       </div>
 
       <footer class="contact" id="contact">
-        <a href="" id="logo"><img src="./images/logo.png" alt=""/></a>
+        <a href="" id="logo"><img src="./images/logo.png" alt="" /></a>
         <div id="phone">
           <span>WeChat & Phone</span>
           152 1683 1797
