--- a/blog_Douban.html
+++ b/blog_Douban.html
@@ -12,8 +12,9 @@
       rel="stylesheet"
       href="https://at.alicdn.com/t/font_1615281_6c4rrgsqx9n.css"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.font.im/css?family=IBM+Plex+Sans:300,300i,500,500i,700,700i"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/blogDetail.css" />
@@ -50,7 +51,13 @@
         modal view inside it. The new modal view appears with new animation that
         creates a 3D sense. The defination of this new modal view in Apple HIG(
         Human Interaction Guidelines ) is as follow<span
-          style="width:85%; margin:15px auto; display: block;font-style: italic;font-weight: 200;"
+          style="
+            width: 85%;
+            margin: 15px auto;
+            display: block;
+            font-style: italic;
+            font-weight: 200;
+          "
           >"Modality is a design technique that presents content in a temporary
           mode that’s separate from the user's previous current context and
           requires an explicit action to exit."<span
@@ -81,7 +88,13 @@
         </div>
         &emsp;This interaction breaks Fitts's law by creating a long path to
         move.<span
-          style="width:85%; margin:15px auto; display: block;font-style: italic;font-weight: 200;"
+          style="
+            width: 85%;
+            margin: 15px auto;
+            display: block;
+            font-style: italic;
+            font-weight: 200;
+          "
           >"Fitts's law predicts that the time required to rapidly move to a
           target area is a function of the ratio between the distance to the
           target and the width of the target."<span
