--- a/blog_stickers.html
+++ b/blog_stickers.html
@@ -12,8 +12,9 @@
       rel="stylesheet"
       href="https://at.alicdn.com/t/font_1615281_6c4rrgsqx9n.css"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.font.im/css?family=IBM+Plex+Sans:300,300i,500,500i,700,700i"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/blogDetail.css" />
@@ -85,7 +86,7 @@
       </div>
 
       <footer class="contact" id="contact">
-        <a href="" id="logo"><img src="./images/logo.png" alt=""/></a>
+        <a href="" id="logo"><img src="./images/logo.png" alt="" /></a>
         <div id="phone">
           <span>WeChat & Phone</span>
           152 1683 1797
