--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
       </nav>
       <div class="slogan">
-        Welcome to Qi Space
+        I am Yuqi Wang, <br />a digital product designer.
         <span
           >The Space is built to display my works and to share my thoughts on
           design.</span
