--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>yuqiDesign</title>
+    <title>yuqi.design</title>
     <link rel="icon" href="./images/ICON.png" />
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/common.css" />
@@ -14,7 +14,7 @@
     />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Archivo:wght@200;300;400;500;600;700;800;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/index.css" />
@@ -57,12 +57,12 @@
       </div>
       <div class="intro_content grid">
         <div class="intro large_title">
-          Hey!<br /> I am Yuqi Wang, <br />an experience designer.
+I am Yuqi Wang, <br />an experience designer.
           <div class="portfolio  nav-item a button">
-            <a href="./pdf/Portfolio_Wangyuqi_UXDesigner.pdf">⬇️ Portfolio.pdf (2021 Updated)</a> 
+            <a href="./pdf/Portfolio_Wangyuqi_UXDesigner.pdf">→ Portfolio.pdf (2021 Updated)</a> 
           </div>
           <div class="resume  nav-item a button">
-            <a href="./pdf/CV_Wangyuqi_UX-Designer.pdf">⬇️ Resume.pdf (2021 Updated)</a> 
+            <a href="./pdf/CV_Wangyuqi_UX-Designer.pdf">→ Resume.pdf (2021 Updated)</a> 
           </div>
 
         </div>
@@ -70,7 +70,7 @@
            <img src="https://images.unsplash.com/photo-1574100004472-e536d3b6bacc?ixid=MXwxMjA3fDB8MHxzZWFyY2h8Mnx8ZGVzaWduZXJ8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60" alt="">
         </div>        
       </div>
-      <div class="works grid">
+      <!-- <div class="works grid">
         <div class="work_content">
           <div class="work_title medium_title">
             My Latest Works 🛠️
@@ -147,7 +147,7 @@
             <img src="https://n.sinaimg.cn/translate/296/w769h327/20180412/L_st-fyzeyqa8292714.jpg" alt="">
           </div>
        </div>
-      </div>
+      </div> -->
     </main>
 
     <footer class="app_footer">
@@ -161,13 +161,13 @@
       </div>
       <div class="footer grid">
         
-        <div class="contact medium_title">
-          <span>Feel free to connect</span></br>
-          wangyuqi1717@163.com
+        <div class="contact">
+          <span> I’m a designer specializing in UX, UI design. I enjoy making beautiful, functional designs that deliver immense value to my clients. Feel free to connect</span></br>
+          <a class="button" href="Mailto:wangyuqi1717@163.com">→ wangyuqi1717@163.com</a> 
         </div>
-        <div class="freelance" style="line-height: 1.5em;">
+        <!-- <div class="freelance" style="line-height: 1.5em;">
           I’m a designer specializing in UX, UI design. I enjoy making beautiful, functional designs that deliver immense value to my clients.
-        </div> 
+        </div>  -->
 
         <!-- <div class="portfolio  nav-item a">
           <a href="./pdf/Portfolio_Wangyuqi_UXDesigner.pdf">Portfolio.pdf </br>2021 Updated</a> 
@@ -268,19 +268,7 @@
           <span>I major in Information Engineering, but I love</span>
           Design
         </div>
-      </div>
-
-      <footer class="contact" id="contact">
-        <a href="" id="logo"><img src="./images/logo.png" alt="" /></a>
-        <div id="phone">
-          <span>WeChat & Phone</span>
-          152 1683 1797
-        </div>
-        <div id="mail">
-          <span>E-mail</span>
-          wangyuqi1717@163.com
-        </div>
-      </footer> -->
+      </div>-->
     <!-- </div> -->
   </body>
 </html>
