--- a/index1.html
+++ b/index1.html
@@ -14,7 +14,7 @@
     />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Archivo:wght@200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/index.css" />
@@ -57,12 +57,12 @@
       </div>
       <div class="intro_content grid">
         <div class="intro large_title">
-I am Yuqi Wang, <br />an experience designer.
+          Hey!<br /> I am Yuqi Wang, <br />an experience designer.
           <div class="portfolio  nav-item a button">
-            <a href="./pdf/Portfolio_Wangyuqi_UXDesigner.pdf">→ Portfolio.pdf (2021 Updated)</a> 
+            <a href="./pdf/Portfolio_Wangyuqi_UXDesigner.pdf">⬇️ Portfolio.pdf (2021 Updated)</a> 
           </div>
           <div class="resume  nav-item a button">
-            <a href="./pdf/CV_Wangyuqi_UX-Designer.pdf">→ Resume.pdf (2021 Updated)</a> 
+            <a href="./pdf/CV_Wangyuqi_UX-Designer.pdf">⬇️ Resume.pdf (2021 Updated)</a> 
           </div>
 
         </div>
@@ -70,7 +70,7 @@ I am Yuqi Wang, <br />an experience designer.
            <img src="https://images.unsplash.com/photo-1574100004472-e536d3b6bacc?ixid=MXwxMjA3fDB8MHxzZWFyY2h8Mnx8ZGVzaWduZXJ8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60" alt="">
         </div>        
       </div>
-      <!-- <div class="works grid">
+      <div class="works grid">
         <div class="work_content">
           <div class="work_title medium_title">
             My Latest Works 🛠️
@@ -147,7 +147,7 @@ I am Yuqi Wang, <br />an experience designer.
             <img src="https://n.sinaimg.cn/translate/296/w769h327/20180412/L_st-fyzeyqa8292714.jpg" alt="">
           </div>
        </div>
-      </div> -->
+      </div>
     </main>
 
     <footer class="app_footer">
@@ -161,7 +161,7 @@ I am Yuqi Wang, <br />an experience designer.
       </div>
       <div class="footer grid">
         
-        <div class="contact medium_title">
+        <div class="contact">
           <span>Feel free to connect</span></br>
           wangyuqi1717@163.com
         </div>
