--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ I am Yuqi Wang, <br />an experience designer.
 
         </div>
         <div class="photo">
-           <img src="https://images.unsplash.com/photo-1574100004472-e536d3b6bacc?ixid=MXwxMjA3fDB8MHxzZWFyY2h8Mnx8ZGVzaWduZXJ8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60" alt="">
+           <img src="./images/p.png" alt="">
         </div>        
       </div>
       <!-- <div class="works grid">
